native/bridge/include/jpdfium.h

// Returns per-character data as a compact JSON array: [{i,u,x,y,w,h,font,size}, ...]
// The caller owns the returned string and must free it with jpdfium_free_string.
JPDFIUM_EXPORT int32_t jpdfium_text_get_chars(int64_t page, char** json);
JPDFIUM_EXPORT int32_t jpdfium_text_find(int64_t page, const char* query, char** json);
JPDFIUM_EXPORT void jpdfium_free_string(char* str);
JPDFIUM_EXPORT int32_t jpdfium_redact_region(int64_t page, float x, float y, float w, float h,
                                             uint32_t argb,
                                             int32_t remove_content) JPDFIUM_NOEXCEPT;
// Hard crop: removes page objects lying outside the crop rectangle [x,y,x+w,y+h] (PDF coordinates).
JPDFIUM_EXPORT int32_t jpdfium_crop_remove_content(int64_t page, float x, float y, float w,
                                                   float h) JPDFIUM_NOEXCEPT;
JPDFIUM_EXPORT int32_t jpdfium_redact_pattern(int64_t page, const char* pattern, uint32_t argb,
                                              int32_t remove_content) JPDFIUM_NOEXCEPT;
JPDFIUM_EXPORT int32_t jpdfium_redact_words(int64_t page, const char** words, int32_t wordCount,
                                            uint32_t argb, float padding, int32_t wholeWord,
                                            int32_t useRegex,
                                            int32_t remove_content) JPDFIUM_NOEXCEPT;