jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java


    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_chars(int64_t page, char **json)
     * }
     */
    public static MemorySegment jpdfium_text_get_chars$address() {
        return jpdfium_text_get_chars.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_text_get_chars(int64_t page, char **json)
     * }
     */
    public static int jpdfium_text_get_chars(long page, MemorySegment json) {
        var mh$ = jpdfium_text_get_chars.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_text_get_chars", page, json);
            }
            return (int)mh$.invokeExact(page, json);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_text_find {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_text_find");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_find(int64_t page, const char *query, char **json)
     * }
     */
    public static FunctionDescriptor jpdfium_text_find$descriptor() {
        return jpdfium_text_find.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_find(int64_t page, const char *query, char **json)
     * }
     */
    public static MethodHandle jpdfium_text_find$handle() {
        return jpdfium_text_find.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_text_find(int64_t page, const char *query, char **json)
     * }
     */
    public static MemorySegment jpdfium_text_find$address() {
        return jpdfium_text_find.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_text_find(int64_t page, const char *query, char **json)
     * }
     */
    public static int jpdfium_text_find(long page, MemorySegment query, MemorySegment json) {
        var mh$ = jpdfium_text_find.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_text_find", page, query, json);
            }
            return (int)mh$.invokeExact(page, query, json);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_free_string {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_free_string");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void jpdfium_free_string(char *str)
     * }
     */
    public static FunctionDescriptor jpdfium_free_string$descriptor() {
        return jpdfium_free_string.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void jpdfium_free_string(char *str)
     * }
     */
    public static MethodHandle jpdfium_free_string$handle() {
        return jpdfium_free_string.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void jpdfium_free_string(char *str)
     * }
     */
    public static MemorySegment jpdfium_free_string$address() {
        return jpdfium_free_string.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void jpdfium_free_string(char *str)
     * }
     */
    public static void jpdfium_free_string(MemorySegment str) {
        var mh$ = jpdfium_free_string.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_free_string", str);
            }
            mh$.invokeExact(str);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_redact_region {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_redact_region");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_region(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t remove_content)
     * }
     */
    public static FunctionDescriptor jpdfium_redact_region$descriptor() {
        return jpdfium_redact_region.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_region(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t remove_content)
     * }
     */
    public static MethodHandle jpdfium_redact_region$handle() {
        return jpdfium_redact_region.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_region(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t remove_content)
     * }
     */
    public static MemorySegment jpdfium_redact_region$address() {
        return jpdfium_redact_region.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_redact_region(int64_t page, float x, float y, float w, float h, uint32_t argb, int32_t remove_content)
     * }
     */
    public static int jpdfium_redact_region(long page, float x, float y, float w, float h, int argb, int remove_content) {
        var mh$ = jpdfium_redact_region.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_redact_region", page, x, y, w, h, argb, remove_content);
            }
            return (int)mh$.invokeExact(page, x, y, w, h, argb, remove_content);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_crop_remove_content {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_crop_remove_content");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_crop_remove_content(int64_t page, float x, float y, float w, float h)
     * }
     */
    public static FunctionDescriptor jpdfium_crop_remove_content$descriptor() {
        return jpdfium_crop_remove_content.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_crop_remove_content(int64_t page, float x, float y, float w, float h)
     * }
     */
    public static MethodHandle jpdfium_crop_remove_content$handle() {
        return jpdfium_crop_remove_content.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_crop_remove_content(int64_t page, float x, float y, float w, float h)
     * }
     */
    public static MemorySegment jpdfium_crop_remove_content$address() {
        return jpdfium_crop_remove_content.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_crop_remove_content(int64_t page, float x, float y, float w, float h)
     * }
     */
    public static int jpdfium_crop_remove_content(long page, float x, float y, float w, float h) {
        var mh$ = jpdfium_crop_remove_content.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_crop_remove_content", page, x, y, w, h);
            }
            return (int)mh$.invokeExact(page, x, y, w, h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_redact_pattern {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_redact_pattern");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_pattern(int64_t page, const char *pattern, uint32_t argb, int32_t remove_content)
     * }
     */
    public static FunctionDescriptor jpdfium_redact_pattern$descriptor() {
        return jpdfium_redact_pattern.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_pattern(int64_t page, const char *pattern, uint32_t argb, int32_t remove_content)
     * }
     */
    public static MethodHandle jpdfium_redact_pattern$handle() {
        return jpdfium_redact_pattern.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_redact_pattern(int64_t page, const char *pattern, uint32_t argb, int32_t remove_content)
     * }
     */
    public static MemorySegment jpdfium_redact_pattern$address() {
        return jpdfium_redact_pattern.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_redact_pattern(int64_t page, const char *pattern, uint32_t argb, int32_t remove_content)
     * }
     */
    public static int jpdfium_redact_pattern(long page, MemorySegment pattern, int argb, int remove_content) {
        var mh$ = jpdfium_redact_pattern.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_redact_pattern", page, pattern, argb, remove_content);
            }
            return (int)mh$.invokeExact(page, pattern, argb, remove_content);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_redact_words {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_FLOAT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT,
            JpdfiumH.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_redact_words");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
